--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     background-color: black;
+    width: 100%;
 }
 
 body::-webkit-scrollbar {
