--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body::-webkit-scrollbar {
 
 .primary-header {
     height: 9%;
+    width: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
