--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     border: 1px solid #64D1FF;
 } */
 
+html {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
